<resources>
    <string name="app_name">FuelCompon</string>

    <!--<string name="google_maps_key">AIzaSyByiwZbUxtT78DMglHKvS2zHGANZbpmKNc</string>-->
    <string name="google_maps_key">AIzaSyAPYR4EO-U2deKsKbXyNLR06ynnVaO0jCA</string>

// name Screens
    <string name="splash">splash</string>
    <string name="main">main</string>
    <string name="tickets">tickets</string>
    <string name="active_tickets">active_tickets</string>
    <string name="archive_tickets">archive_tickets</string>
    <string name="help">help</string>
    <string name="choice_fuel">choice_fuel</string>
    <string name="map">map</string>
    <string name="mapF">mapF</string>
    <string name="new_wait">new_wait</string>
    <string name="awaits_payment">awaits_payment</string>
    <string name="infoTicket">infoTicket</string>
    <string name="tutorial">tutorial</string>
    <string name="auth">auth</string>
    <string name="auth_phone">auth_phone</string>
    <string name="auth_code">auth_code</string>
    <string name="tickets_buy">tickets_buy</string>
    <string name="calculator">calculator</string>
    <string name="search_departure">search_departure</string>
    <string name="profile">profile</string>
    <!--<string name="pay_talon">pay_talon</string>-->

// Auth
    <string name="code_uk">+380</string>

// Tickets
    <string name="my_tickets">Мои талоны</string>
    <string name="ticket">талона</string>
    <string name="contact_us">Связь с нами</string>
    <string name="help_1">Возникли проблемы и вопросы?\nМы поможем.</string>
    <string name="call_operator">Позвонить оператору</string>
    <string name="choice_fuel_title">Выбор топлива</string>
    <string name="choice_fuel_txt">Выберите тип топлива на\u0020</string>
    <string name="unit_l">л.</string>
    <string name="unit_grn_L">грн/л</string>
    <string name="shelf_life">до</string>
    <string name="pay_tickets">Купить талоны</string>
    <string name="splash_text">Талоны дешевле, чем на АЗС,\nи удобнее бумажных</string>
    <string name="splash_archive">Здесь будут все\nиспользованные талоны</string>
    <string name="splash_archive_1">Списанные талоны можно\nвосстановить, если от покупки\nпрошло меньше 3 месяцев</string>
    <string name="splash_text_1">ДТ и бензин</string>
    <string name="splash_text_2">от</string>
    <string name="splash_text_3">Газ</string>
    <string name="splash_text_4">от 8 грн</string>
    <string name="mark_used_coupons">Отмечайте использованные талоны</string>
    <string name="confirm_payment">Подтвердите оплату</string>
    <string name="expect_receive">Ожидайте получения</string>
    <string name="receipt_coupons_txt">Получение талонов</string>
    <string name="white">Ожидайте получение талонов\nв течении 5–10 минут</string>
    <string name="awaits_payment_txt">Ожидаем подтверждения оплаты талонов</string>
    <string name="unpaid_orders">Неоплаченные заказы</string>
    <string name="confirm_payment_1">Подтвердить платеж</string>
    <string name="active_ticket">Активный талон</string>
    <string name="begining">Начало работы</string>
    <string name="number_phone">Номер телефона</string>
    <string name="code_sms">Код подтверждения из SMS</string>
    <string name="sms_cometo">SMS придет на указаный номер</string>
    <string name="info_phone">Который хотите использовать или использовали для работы</string>
    <string name="contin">Продолжить</string>
    <string name="ticket_used">Талон использован</string>
    <string name="ticket_n">Талон</string>
    <string name="order_date">Дата заказа</string>
    <string name="cost">Стоимость</string>
    <string name="cost_azs">Стоимость на АЗС</string>
    <string name="econom">Экономия</string>
    <string name="tickets_buy_txt">Покупка топлива</string>
    
    <string-array name="tickets_ar">
        <item>талон</item>
        <item>талона</item>
        <item>талонов</item>
    </string-array>

    // Calculator
    <string name="calculator_flow">Калькулятор расхода</string>
    <string name="first_point">Пункт отправления</string>
    <string name="last_point">Пункт прибытия</string>
    <string name="kiev">Например, Киев</string>
    <string name="kharkiv">Например, Харьков</string>
    
// Map
    <string name="map_txt">Карта</string>
    <string name="nearest_station">Ближайшая заправка</string>
    <string name="more_information">Больше информации</string>
    <string name="get_directions">Проложить маршрут</string>

// Profile
    <string name="driver">Водитель</string>
    <string name="my_details">Мои данные</string>
    <string name="contact">Контакты, безопастность</string>
    <string name="settings">Настройки</string>
    <string name="set_2">Язык, уведомления</string>
    <string name="connect">Связь с нами</string>
    <string name="questions">Вопросы и предложения</string>

    <string-array name="tab_tickets">
        <item>Активные</item>
        <item>Архив</item>
    </string-array>




</resources>
